modify index.html w/ viewport for mobile

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="js/jquery-1.11.1.js"></script>
     <script type="text/javascript" src="js/GolfCardCounter.js"></script>
     <link rel="stylesheet" href="css/GolfCardCounter.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
